feat: Configure Astro Starlight for Voltrux Motors documentation
Configured Astro Starlight to serve as a high-end portfolio for an AEM Developer,
Voltrux Motors project. This commit includes:

- Branding:
  - Set accent color to Teal / Dark Cyan (#008080) via src/styles/custom.css.
  - Configured stro.config.mjs to link custom.css.

- Integrations:
  - Enabled Mermaid.js diagrams using stro-mermaid integration.

- Navigation:
  - Updated stro.config.mjs with the specified sidebar structure
    (Overview, Component Library, Backend Logic, DevOps & Workflow).

- Content Structure:
  - Created necessary content directories: src/content/docs/{overview,components,backend-logic,devops}.

- Initial Content Pages:
  - src/content/docs/index.mdx: Landing page with Hero and Feature Grid.
  - src/content/docs/overview/architecture.md: System Architecture with Mermaid diagram.
  - src/content/docs/components/test-drive.md: Test Drive Form Component with code showcase.
  - src/content/docs/components/3d-configurator.md: 3D Truck Configurator overview.
  - Placeholder pages for all other sidebar links.

--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -1,40 +1,32 @@
 ---
-title: Welcome to Starlight
-description: Get started building your docs site with Starlight.
-template: splash # Remove or comment out this line to display the site sidebar on this page.
+title: Voltrux Motors Engineering
+template: splash
 hero:
-  tagline: Congrats on setting up a new Starlight project!
-  image:
-    file: ../../assets/houston.webp
+  title: 'Voltrux Motors Engineering'
+  tagline: 'A Reference Implementation of Hybrid AEM Architecture.'
   actions:
-    - text: Example Guide
-      link: /guides/example/
+    - text: 'Explore Architecture'
+      link: /overview/architecture
       icon: right-arrow
-    - text: Read the Starlight docs
-      link: https://starlight.astro.build
-      icon: external
-      variant: minimal
+      variant: primary
+    - text: 'View Source on GitHub'
+      link: https://github.com/your-username/voltrux-motors
+      icon: github
+      variant: secondary
 ---
 
 import { Card, CardGrid } from '@astrojs/starlight/components';
 
-## Next steps
+## Next-Generation Automotive Experiences
 
-<CardGrid stagger>
-	<Card title="Update content" icon="pencil">
-		Edit `src/content/docs/index.mdx` to see this page change.
+<CardGrid>
+	<Card title="Hybrid Headless" icon="puzzle">
+		Combining AEM SPA Editor with standard HTL for maximum SEO and interactivity.
 	</Card>
-	<Card title="Change page layout" icon="document">
-		Delete `template: splash` in `src/content/docs/index.mdx` to display a
-		sidebar on this page.
+	<Card title="Three.js Integration" icon="3d">
+		Interactive 3D Product Configurator embedded directly into AEM Components.
 	</Card>
-	<Card title="Add new content" icon="add-document">
-		Add Markdown or MDX files to `src/content/docs` to create new pages.
-	</Card>
-	<Card title="Configure your site" icon="setting">
-		Edit your `sidebar` and other config in `astro.config.mjs`.
-	</Card>
-	<Card title="Read the docs" icon="open-book">
-		Learn more in [the Starlight Docs](https://starlight.astro.build/).
+	<Card title="Enterprise Scale" icon="setting">
+		Built with MSM (Multi-Site Manager) and localization architecture in mind.
 	</Card>
 </CardGrid>
