feat: Enable syntax highlighting and improve homepage content

--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -17,16 +17,16 @@ hero:
 
 import { Card, CardGrid } from '@astrojs/starlight/components';
 
-## Next-Generation Automotive Experiences
+## Project Overview
 
 <CardGrid>
-	<Card title="Hybrid Headless" icon="puzzle">
-		Combining AEM SPA Editor with standard HTL for maximum SEO and interactivity.
+	<Card title="Project Objective" icon="target">
+		To create reusable, maintainable AEM components that follow best practices and enhance the authoring experience.
 	</Card>
-	<Card title="Three.js Integration" icon="3d">
-		Interactive 3D Product Configurator embedded directly into AEM Components.
+	<Card title="Tech Stack" icon="rocket">
+		Utilizing AEM 6.5/Cloud, HTL, Sling Models, and modern JavaScript to build robust, enterprise-grade solutions.
 	</Card>
-	<Card title="Enterprise Scale" icon="setting">
-		Built with MSM (Multi-Site Manager) and localization architecture in mind.
+	<Card title="Key Features" icon="approve">
+		A focus on responsive design, accessibility compliance, configurable dialogs, and performance optimization.
 	</Card>
 </CardGrid>
