docs: added the testdrive form content

--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -10,7 +10,7 @@ hero:
       icon: right-arrow
       variant: primary
     - text: 'View Source on GitHub'
-      link: https://github.com/your-username/voltrux-motors
+      link: https://github.com/deepak3d/Voltrux
       icon: github
       variant: secondary
 ---
