--- a/src/content/docs/components/header.mdx
+++ b/src/content/docs/components/header.mdx
@@ -3,9 +3,23 @@ title: Header Component
 description: Comprehensive guide for the Header component in Voltrux Motors
 ---
 
-import HeaderPreview from '../../../components/HeaderPreview.jsx';
+import HeaderPreview from '../../../components/HeaderPreview.astro';
+import HeaderDialog from '../../../components/HeaderDialog.astro';
 
 This document provides a detailed overview of the `header` component, which is used to display the main navigation with logo, navigation links, call-to-action button, and mobile-friendly navigation with hamburger menu.
+
+## Dialog Configuration
+
+The component includes a comprehensive dialog for content authors, allowing them to customize the header content and navigation. Here's an interactive preview of the Touch UI dialog:
+
+<HeaderDialog />
+
+The Touch UI dialog provides an intuitive interface for content authors to:
+
+- Upload a custom logo image
+- Set the logo text and mobile CTA text
+- Configure the main navigation links
+- Easily reorder navigation items using the up/down buttons
 
 ## Component Preview
 
@@ -78,6 +92,19 @@ The Header component is a responsive navigation component for the Voltrux Motors
 - Accessible navigation with focus states
 - Mobile-friendly hamburger menu
 - Scroll effect with enhanced shadow
+
+## Dialog Configuration
+
+The component includes a comprehensive dialog for content authors, allowing them to customize the header content and navigation. Here's an interactive preview of the Touch UI dialog:
+
+<HeaderDialog />
+
+The Touch UI dialog provides an intuitive interface for content authors to:
+
+- Upload a custom logo image
+- Set the logo text and mobile CTA text
+- Configure the main navigation links
+- Easily reorder navigation items using the up/down buttons
 
 ## Component Structure
 
